--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
+
 {
   "name": "daianaventroni",
   "version": "1.0.0",
   "description": "Daina Ventroni Website",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
