--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "daianaventroni",
   "version": "1.0.0",
@@ -24,6 +23,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.6",
-    "pg": "^6.1.0"
+    "pg": "^6.1.0",
+    "spiced-pg": "spicedacademy/spiced-pg"
   }
 }
