--- a/package.json
+++ b/package.json
@@ -18,13 +18,6 @@
   },
   "homepage": "https://github.com/guilhermedelucas/daianaventroni#readme",
   "dependencies": {
-    "basic-auth": "^1.1.0",
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
-    "handlebars": "^4.0.6",
-    "pg": "^6.1.0",
-    "spiced-pg": "spicedacademy/spiced-pg"
+    "express": "^4.14.0"
   }
 }
